# opus

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bunfig.toml  docker-compose.yml  nginx.conf  package.json  turbo.json
.husky/: pre-commit
apps/web/: .eslintrc.cjs  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: Layout.tsx  ProtectedRoute.tsx
apps/web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Select.tsx  StatCard.tsx  index.ts
apps/web/src/contexts/: RealtimeContext.tsx
apps/web/src/hooks/: useSupabaseRealtime.ts
apps/web/src/lib/: api-client.ts  auth-client.ts  auth.ts  supabase-realtime.ts  supabase.ts
apps/web/src/pages/: Books.tsx  Checkouts.tsx  Dashboard.test.tsx  Dashboard.tsx  Landing.tsx  Login.tsx  Scanner.tsx  Users.tsx
apps/web/src/test/: setup.ts
auth-service/: .env.example  eslint.config.js  package.json  tsconfig.json
auth-service/src/: index.ts  jwt-bridge.ts
backend/: Cargo.toml  rustfmt.toml
backend/src/: main.rs
backend/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs
backend/src/handlers/: books.rs  checkouts.rs  mod.rs  users.rs
backend/src/models/: book.rs  checkout.rs  mod.rs  user.rs
backend/src/services/: open_library.rs
frontend/: .eslintrc.json  .prettierrc  README.md  package.json  tsconfig.json
frontend/src/: main.tsx
frontend/src/components/: AdminPanel.tsx  App.tsx  BookList.tsx  BookScanner.tsx  Dashboard.tsx  LoginForm.tsx
frontend/src/services/: ApiService.ts  AuthService.ts  BetterAuthService.ts
frontend/src/types/: index.ts
frontend/src/utils/: jsx.ts
prisma/: schema.prisma
scripts/: setup-supabase.md
services/api/: Cargo.toml  package.json  rustfmt.toml
services/api/src/: main.rs
services/api/src/handlers/: books.rs  checkouts.rs  mod.rs  users.rs
services/api/src/middleware/: auth.rs
services/api/src/models/: book.rs  checkout.rs  mod.rs  user.rs
services/api/src/services/: email.rs  mod.rs  supabase_sync.rs
services/auth/: .env.example  package.json  tsconfig.json
services/auth/src/: auth.ts  index.ts
services/auth/src/lib/: supabase.ts
